# catcam

./: .gitignore  README.md  TODO.md  pyproject.toml
configs/: macos-dev.json  rpi4-prod.json
deploy/systemd/: catcam.service
docs/: architecture.md  contributing.md  raspberry-pi.md  requirements.md
scripts/: fetch_model_assets.sh  live_test.sh  macos_quickstart.sh  macos_setup.sh  pi_install_service.sh  pi_setup.sh  pi_smoke_test.sh
src/catcam/: __init__.py  app.py  benchmark.py  cli.py  config.py  deploy.py  runtime.py  types.py
src/catcam/camera/: __init__.py  base.py  factory.py  mac_camera.py  pi_camera.py  replay_camera.py
src/catcam/pipeline/: __init__.py  baby_resolver.py  detector.py  event_engine.py  motion.py  targeting.py  tracker.py
src/catcam/recording/: __init__.py  base.py  buffer.py  factory.py  pi_native.py  writer.py
src/catcam/storage/: metadata.py  paths.py
tests/: test_app.py  test_baby_resolver.py  test_benchmark.py  test_buffer.py  test_cli.py  test_deploy.py  test_event_engine.py  test_packaging.py  test_pi_native.py  test_runtime.py  test_runtime_integration.py  test_scripts.py  test_storage_paths.py  test_targeting.py  test_tracker.py  test_writer.py
